--- a/src/App.css
+++ b/src/App.css
@@ -6,9 +6,12 @@
 }
 
 section {
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
-  scroll-snap-align: start;
+}
+
+html {
+  scroll-behavior: smooth;
 }
